Fix command line wrapping

--- a/src/show-your-terms.sass
+++ b/src/show-your-terms.sass
@@ -213,7 +213,10 @@ $term-default-padding: 14px
   .type, .line, .command
     margin-left: $term-default-padding
     margin-right: $term-default-padding
-    
+
+  .type, .command
+    word-break: break-all
+  
 @keyframes syt_b
   0%,50%
     opacity: 0
